# MachineLearningPlusPlus

./: CMakeLists.txt  README.md
include/: Matrix.h  MatrixExceptions.h  libMachineLearning.h
src/: CMakeLists.txt  libMachineLearning.cpp
